--- a/css/style-w3.css
+++ b/css/style-w3.css
@@ -257,3 +257,11 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-hover-theme:hover {color:#fff !important; background-color:#000000 !important}
 .w3-hover-text-theme:hover {color:#000000 !important}
 .w3-hover-border-theme:hover {border-color:#000000 !important}
+
+/* Custom */
+a.anchor-text {
+    display: block;
+    position: relative;
+    top: -43px;
+    visibility: hidden;
+}
